--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "background": {
     "scripts": [
-      "background.js"
+      "background.js",
+      "result.js"
     ]
   },
   "content_scripts": [
@@ -20,5 +21,9 @@
   ],
   "browser_action": {
     "default_icon": "icon.png"
-  }
+  },
+  "permissions": [
+    "tabs",
+    "https://accounts.spotify.com/*"
+  ]
 }
