instead of using timeout to wait for redirect url to be loaded or wait for the click event to happen, we use the chrome.tabs.onUpdated where it wait the new tab to be updated and completed then we will start to add all the songs to the playlist in Spotify

--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,7 @@
   "version": "0.0.1",
   "background": {
     "scripts": [
-      "background.js",
-      "result.js"
+      "background.js"
     ]
   },
   "content_scripts": [
