--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
         "https://play.google.com/music/listen*"
       ],
       "js": [
-        "immutable-3.8.1.min.js",
+        "immutable.min.js",
         "content.js"
       ]
     }
